--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/pokeball.ico",
               "src/assets"
             ],
             "styles": [
@@ -87,7 +87,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/pokeball.ico",
               "src/assets"
             ],
             "styles": [
